--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,36 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-html{
-    font-size: 62.5%;
-}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+
+html {
+  font-size: 62.5%; }
+
+.navbar {
+  font-family: "Montserrat", sans-serif; }
+
+.logo-header {
+  width: 80px; }
+
+.navbar-brand {
+  font-size: 1.5rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  margin-left: 1rem;
+  color: black; }
+
+.navbar-nav {
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  font-weight: 600;
+  gap: 1.5rem; }
+  .navbar-nav .nav__link {
+    text-decoration: none;
+    color: black; }
+
+.carousel-item {
+  position: relative; }
+  .carousel-item .carousel__link {
+    position: absolute;
+    top: 450px;
+    left: 680px; }
